[package]
name = "Theia"
version = "0.1.0"
authors = ["Guy <guy.garcia@protonmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []

[workspace]

[dependencies]
camera = { path = "src/camera" }
interface = { path = "src/interface" }
processor = { path = "src/processor" }

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.67"}